--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -37,7 +37,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>663</width>
+         <width>665</width>
          <height>932</height>
         </rect>
        </property>
@@ -127,7 +127,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QListView" name="annoList">
+      <widget class="CustomListWidget" name="annoList">
        <property name="styleSheet">
         <string notr="true"/>
        </property>
